Issue 92 play submit and Java 21 (#659)
* Added play form create logic

* Address a couple sonar issues

* Added redirect to view play after successful submit

* Added display of basic errors.

* Added card sets

* Fixed errors from rebasing on master

* Reformatted code

* Added explicit tests for Display.cardSetsToString

* Missed a test case in cardSetsToStringTest

* Add serialization/deserialization for errors in Kotlin

So that we can send verification errors from the server to the client,
we need to make the errors serializable. Unfortunately, serialization
does not work on legacy JS, so needed to switch to JS IR.

* Added unit test for RulesUtils

* Addressed a few code style issues.

* Cosmetic cleanup of code

* Linting fixes

* Change rules display utils to expect a double level map as a card deref

* Added pretty printing of errors throughout

* Added game components into rules engine

* Replaced usage of base set ids in verifier test with arbitrary values

* Generate valid value ranges automatically from a Release object

* Create a card lookup table, modify verifier to check cards against the list instead of using id ranges

* Move server code to use rules model objects

* Removed card list objects from server and db

* Improved test coverage

* Bump org.springframework.boot from 2.7.6 to 3.1.4 in /server

Bumps [org.springframework.boot](https://github.com/spring-projects/spring-boot) from 2.7.6 to 3.1.4.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v2.7.6...v3.1.4)

---
updated-dependencies:
- dependency-name: org.springframework.boot
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fixed Eclipse test execution

* WIP

* Bump the kotlin_plugins group in /rules with 2 updates

Bumps the kotlin_plu